# Open-CV

./: CMakeLists.txt  README.md  Regocnizer.cpp  Regocnizer.hpp  batch.txt  main.cpp  opencv-project
